--- a/_config.yml
+++ b/_config.yml
@@ -2,20 +2,20 @@
 remote_theme: digitalmalayali/linkhub-jekyll-theme
 
 # Site Configuration
-name: HashKush  # Name of your website
+name: Juche Julia  # Name of your website
 tagline: Links  # Set your preferred page title
-description: I'm a Southern California Stoner who likes to listen to music and showcase art and music with the community. I also take Requests. We listen to anything and everything from rock to hip hop to international to you name it. Come join the fun!  # Also used as a meta description
+description: communist & certified juche lover. there is only one korea 🇰🇵🇰🇷. glory to the resistance, always.  # Also used as a meta description
 favicon:
-  path: https://raw.githubusercontent.com/StreetCatLove/HashKush/refs/heads/main/favicon.ico # Path / URL to the favicon of your website (e.g., 'assets/images/favicon.png')
+  path: https://raw.githubusercontent.com/StreetCatLove/JucheJulia/refs/heads/main/favicon.ico # Path / URL to the favicon of your website (e.g., 'assets/images/favicon.png')
   type: ico # File format of image. Change according to your image. Supported types: https://developer.mozilla.org/en-US/docs/Web/Media/Formats/Image_types
-logo: https://raw.githubusercontent.com/StreetCatLove/HashKush/refs/heads/main/assets/logo.png
-url: https://kick.com/hashkush # URL of your website
+logo: https://raw.githubusercontent.com/StreetCatLove/JucheJulia/refs/heads/main/assets/logo.png
+url: https://kick.com/JucheJulia # URL of your website
 locale: en_US # The value specifies the locale in which these tags are marked up. It follows the format `language_TERRITORY`.
 ga4: # Google Analytics 4 measurement ID, for e.g. G-XXXXXXX (optional). Remove it if it’s not needed.
 twitter:
-  username: HashKush # Used for SEO
+  username: k1myojong # Used for SEO
 image:
-  path: https://raw.githubusercontent.com/StreetCatLove/HashKush/refs/heads/main/assets/logo.png # Used for SEO (og:image, twitter:image)
+  path: https://raw.githubusercontent.com/StreetCatLove/JucheJulia/refs/heads/main/assets/logo.png # Used for SEO (og:image, twitter:image)
   type: png # File format of image.
   height: 100 # Pixels
   width: 100
