--- a/_data/links.yml
+++ b/_data/links.yml
@@ -20,7 +20,7 @@ buttons:
       icon: tdesign:heart # Icons are optional    
     
     - title: Juche Julia on Twitch
-      url: https://www.twitch.tv/street_cat_love
+      url: https://www.twitch.tv/juchejulia
       icon: tdesign:camera # Icons are optional
 
     - title: Divest From Twitch
