--- a/_data/social.yml
+++ b/_data/social.yml
@@ -4,7 +4,7 @@
   color: '#53FC18'
 
 - name: x
-  url: https://x.com/k1myojong
+  url: https://x.com/haesoook
   icon: ri:twitter-fill
   color: '#1D9BF0'
 
